@@ -7,11 +7,11 @@ AUX parity-1.1.0-runtime-includes.patch 391 RMD160 b37ee9e5798a3e3d952bacdc1d89e
 AUX parity-1.2.0-exception-handling.patch 1188 RMD160 27569e410f1ecabfe4efbfae936c0d30335c6d87 SHA1 c641d72c23dae5c82ae8e55f7f5c4baf114393aa SHA256 4a35beeb81546d3fd4c7e952b4aaa7cabd5c49a1ff2112e891bd56f7a5463536
 AUX parity-1.2.0-winnt-version.patch 344 RMD160 1c56c957effac94ea925b75b0816c3076d165c1c SHA1 45774250519c669a1883294b223b0e6152f0b04a SHA256 a6d76f4e534c21285f95d07ed9502864fd5c05004361b48b7203b0b7f3c61aab
 AUX parity-1.2.2-lib-search.patch 615 RMD160 732b7eaa74db92b0d86ea9a87dd5e16947a3f4f2 SHA1 4fad8817fcf199984208dc859389cf6dd29b1180 SHA256 c837d3469242bfa4a7b05c25d9dd2d9d8bc09d8912fd400a9f60fbaaf73d7934
-AUX parity-prefix-wrapper.sh 1030 RMD160 02ca06c8923f42811e47261708adab696edb9122 SHA1 ea8f4cc01b783b6cc93de018ce62f29bb52af4a2 SHA256 c0d9b07acbefdd3b2e7dffce5e5f61b6b5aec56d1b21e79ba0d181accccdff39
+AUX parity-prefix-wrapper.sh 1065 RMD160 28634521fc7b80d13c5432d8b2a604f9ec9370e7 SHA1 01ffc939b1209fe5f4dbce0ae2db4fcf9aab2f79 SHA256 0d0e5a054fa8f8f4e998455114550ed8889b60855601bb9e133cd5a5c36efb2d
 DIST parity-1.2.1.tar.gz 438188 RMD160 00330ef4193363b3681a5e4d23401f8185293ab8 SHA1 1bc2d3fc7ffc8c37e470976348498c26824fc3e4 SHA256 d6019d3e68e8e7685b9d729ee4f7419e8814ea756fd340f7416f98a65b38c237
 DIST parity-1.2.2.tar.gz 438660 RMD160 712172e64308c458de314b6b3e5a16ebd8cab657 SHA1 c11421ed33f7808eb5b709f8ac13aecb8a4f5a32 SHA256 caae0e9a84c7be75ab2460ca224352ae9914a025395f5f1e936df9d7bcee242f
 EBUILD parity-1.2.1.ebuild 1454 RMD160 8c96d5cc981103773caed90376d6e83e741c8de2 SHA1 eec3b4bf2cc9695053147db050ec5f3c659ddfff SHA256 c8214c8d0a8d8ba0aa217af1dfaf5c2f2acfd34cc7951fc0e1620683c4a1aad5
 EBUILD parity-1.2.2.ebuild 1454 RMD160 a18b52680ea440020849e60730ab7a8d905f0579 SHA1 fcc763e82422d10fb467c7551e4f0509781f4efb SHA256 6834ea7bc9bb06857905bcb9348ff310e9889a25ae0659c38aa14bc6a7a13794
 EBUILD parity-9999.ebuild 1632 RMD160 5307fadbb064f372b15e71883a577a914758de42 SHA1 ce8469ac69152ba00c915c1f75cb5d4003b60d4d SHA256 bfc875899b6d3fd0350d31a1379b88b3dfc8b9cafd9c26885db8e4ff58f39621
-MISC ChangeLog 2827 RMD160 3cb9866de375398a4e5e3f2143f7bf6fc84c3e0a SHA1 fa2302776cc9634c95dd99930d826449c8f81682 SHA256 55970d4663d160db0ca66968355ab857e70deb6a99a07a4626cfb70a2abd8727
+MISC ChangeLog 2970 RMD160 52259dba7bd6bad4ef2050200d4ba0b663b9f1d4 SHA1 c40012c69dee0f58df3c28c94c5e23318b284e9c SHA256 fb22e68cd71d1373b842b15083794d54d98352314ef6eb73918f7c6a8637fda3
 MISC metadata.xml 255 RMD160 5cf1b4dac09b88b5d9d409a808c902351565c87d SHA1 18362d69850fd6e1cfdd5af125ca3676e439072e SHA256 fbdb7a8bcb38969ff60fddf3131f3ee837da046a77d73c22b27e81fb05233a45
