@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  17 Jun 2009; Markus Duft <mduft@gentoo.org>
+  files/parity-prefix-wrapper.sh:
+  fixed parity wrapper script to work without EPREFIX set too
+
   09 Jun 2009; Markus Duft <mduft@gentoo.org>
   +files/parity-1.2.2-lib-search.patch:
   fix library search which could choke on a directory with the same name as
